--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,20 @@
 #us{
-  height: 560px;
+  width: 650px;
   display:block;
   margin-left: auto;
   margin-right: auto;
 }
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
 
-
-  body {
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+      body {
       font: 400 15px Lato, sans-serif;
       line-height: 1.8;
       color: #071522; /* TEXT COLORS */
